[licence]: add licence text to the footer [router navigation]: set up watch method to the Root component: 	- method is triggering toggleVisibility method once user navigating thru browser history 	- that was a little buggy, only navigation thru onclick/press nav button triggered toggleVisiblity, and backspace button did nothing

--- a/src/components/Footer/style.sass
+++ b/src/components/Footer/style.sass
@@ -13,3 +13,13 @@
     @media (min-width: 1620px)
         font-size: .6rem
     text-align: center
+
+a,
+a:link,
+a:visited,
+a:active
+    text-decoration: none
+    color: inherit
+
+a:hover
+    text-decoration: underline
